# ChangeLog for net-mail/vpopmail
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-mail/vpopmail/ChangeLog,v 1.104 2011/08/20 07:28:13 eras Exp $

  20 Aug 2011; Eray Aslan <eras@gentoo.org> vpopmail-5.4.33.ebuild:
  Add mysql incdir to configure script - bug #379813

  09 Aug 2011; Kacper Kowalik <xarthisius@gentoo.org> vpopmail-5.4.33.ebuild:
  ppc/ppc64 stable wrt #378371

*vpopmail-5.4.33 (27 Jul 2011)

  27 Jul 2011; Eray Aslan <eras@gentoo.org> +vpopmail-5.4.33.ebuild:
  version bump - bug #346835

  15 May 2011; Kacper Kowalik <xarthisius@gentoo.org>
  vpopmail-5.4.30-r2.ebuild:
  Marked ~ppc64 wrt #366525

  03 Oct 2010; Raúl Porcel <armin76@gentoo.org> vpopmail-5.4.16.ebuild,
  vpopmail-5.4.30-r1.ebuild, vpopmail-5.4.30-r2.ebuild:
  Add ~ia64 wrt #339025

  23 Aug 2010; Jeroen Roovers <jer@gentoo.org> vpopmail-5.4.30-r1.ebuild:
  Stable for HPPA (bug #285213).

  22 Aug 2010; Benedikt Böhm <hollow@gentoo.org> metadata.xml:
  remove myself from metadata.xml

  01 Jun 2010; Joseph Jezak <josejx@gentoo.org> vpopmail-5.4.30-r1.ebuild:
  Marked ppc stable for bug #285213.

*vpopmail-5.4.30-r2 (30 May 2010)

  30 May 2010; Benedikt Böhm <hollow@gentoo.org> -vpopmail-5.4.19.ebuild,
  -vpopmail-5.4.20.ebuild, -vpopmail-5.4.25.ebuild, -vpopmail-5.4.26.ebuild,
  -vpopmail-5.4.30.ebuild, vpopmail-5.4.30-r1.ebuild,
  +vpopmail-5.4.30-r2.ebuild, metadata.xml:
  5.4.30-r1 stable on amd64 wrt #285213; add support for spamassassin wrt
  #315643

  05 Apr 2010; Raúl Porcel <armin76@gentoo.org> vpopmail-5.4.30-r1.ebuild:
  arm/s390/sh/sparc stable wrt #285213

  21 Feb 2010; Christian Faulhammer <fauli@gentoo.org>
  vpopmail-5.4.30-r1.ebuild:
  stable x86, bug 285213

*vpopmail-5.4.30-r1 (20 Feb 2010)

  20 Feb 2010; Benedikt Böhm <hollow@gentoo.org>
  +vpopmail-5.4.30-r1.ebuild, +files/vpopmail-double-free.patch:
  fix vusagec failure wrt #301650
